--- a/Mine.Commerce.Domain/Mine.Commerce.Domain.csproj
+++ b/Mine.Commerce.Domain/Mine.Commerce.Domain.csproj
@@ -1,17 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.4"/>
+    <PackageReference Include="MediatR" Version="8.1.0"/>
   </ItemGroup>
-
   <ItemGroup>
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
       <_Parameter1>Mine.Commerce.Api</_Parameter1>
     </AssemblyAttribute>
   </ItemGroup>
-
 </Project>
