--- a/src/Mine.Commerce.Api/appsettings.Development.json
+++ b/src/Mine.Commerce.Api/appsettings.Development.json
@@ -9,7 +9,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Server=127.0.0.1;Port=5432;Database=mine_api;User Id=admin;Password=P@ssw0rd;Timeout=15;"
   },
   "AzureStorageInfor": {
     "EndpointUri" : "",
