--- a/src/Mine.Commerce.Infrastructure/Mine.Commerce.Infrastructure.csproj
+++ b/src/Mine.Commerce.Infrastructure/Mine.Commerce.Infrastructure.csproj
@@ -6,14 +6,38 @@
     <ProjectReference Include="..\Mine.Commerce.Domain\Mine.Commerce.Domain.csproj"/>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.4">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
     <PackageReference Include="Azure.Storage.Files.Shares" Version="12.2.3"/>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.4.4"/>
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.5"/>
     <PackageReference Include="Cronos" Version="0.7.0"/>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="9.2.0"/>
+    <PackageReference Include="AutoMapper" Version="9.0.0"/>
+    <PackageReference Include="MediatR" Version="8.1.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2"/>
+     <PackageReference Include="Grpc.AspNetCore" Version="2.30.0"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.4"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.4">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9"/>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3"/>
+    <PackageReference Include="Mine.Commerce.gRpc" Version="1.1.6"/>
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.4.1"/>
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.4.1"/>
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="5.4.1"/>
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.0"/>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="3.1.5"/>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.5"/>
+    <PackageReference Include="IdentityModel" Version="4.3.0"/>
+    <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="3.0.1"/>
+    <PackageReference Include="System.Linq.Async" Version="4.1.1"/>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.4"/>
   </ItemGroup>
   <ItemGroup>
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
