--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -11,8 +11,10 @@ jobs:
         username: ${{ secrets.acr_mmondocker_username }}
         password: ${{ secrets.acr_mmondocker_password }}
     
-    - name: Build and push image to ACR
-      id: build-image
+    - name: Build
+      id: Dotnet Build
       run: |
-        docker build "$GITHUB_WORKSPACE/" -f  "Dockerfile" -t mmondocker.azurecr.io/dev:${{ github.sha }}
-        docker push mmondocker.azurecr.io/dev:${{ github.sha }}
+          dotnet restore
+          dotnet build
+    - name: Publish
+          dotnet publish -p ./src/Mine.Commerce.Api
