--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -17,4 +17,5 @@ jobs:
           dotnet restore
           dotnet build
     - name: Publish
+      run: |
           dotnet publish -p ./src/Mine.Commerce.Api
