--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -1,5 +1,8 @@
 on: [push]
 jobs:
+  build-and-test:
+    runs-on: ubuntu-latest
+    - uses: actions/checkout@master
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
