--- a/src/Mine.Commerce.Infrastructure/Mine.Commerce.Infrastructure.csproj
+++ b/src/Mine.Commerce.Infrastructure/Mine.Commerce.Infrastructure.csproj
@@ -40,6 +40,8 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.4" />
     <PackageReference Include="Mapster" Version="6.5.0" />
     <PackageReference Include="MassTransit" Version="7.0.4" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="7.0.4" />
+    <PackageReference Include="MassTransit.AspNetCore" Version="7.0.4" />
   </ItemGroup>
   <ItemGroup>
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
