--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -1,7 +1,7 @@
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS build
 
 COPY . .
-RUN dotnet restore "./Mine.Commere.Service.sln"
+RUN dotnet restore "./src/Mine.Commere.Service.sln"
 
 COPY ./.github/tests/start-test.sh /app/start-test.sh
 
