--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -4,7 +4,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    
     - uses: azure/docker-login@v1
       with:
         login-server: mmondocker.azurecr.io
@@ -13,6 +12,7 @@ jobs:
     
     - name: Build
       run: |
+          cd "./src"
           dotnet restore
           dotnet build
     - name: Publish
