--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -8,17 +8,17 @@ services:
       POSTGRES_USER: ${POSTGRES_USER:-admin}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-P@ssw0rd}
       PGDATA: /data/postgres
+    volumes:
+       - postgres:/data/postgres
     ports:
       - "5432:5432"
     restart: unless-stopped
 
-  mine-api:
+  mine-service:
     build: 
-      dockerfile: Dockerfile.test
-      context: ../../
-    #volumes: 
-    #    - $GITHUB_WORKSPACE/test_results:/app/test_results
-    environment:
-        ASPNETCORE_ENVIRONMENT: test
-  
+      dockerfile: ./Dockerfile.test
+      context: .
+    #environment:
 
+volumes:
+    postgres:
