--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -1,7 +1,9 @@
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS build
+FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS mine-service-test
 
+WORKDIR /src
 COPY . .
-RUN dotnet restore "./src/Mine.Commere.Service.sln"
+WORKDIR /src/src
+RUN dotnet restore "./Mine.Commerce.Service.sln"
 
 COPY ./.github/tests/start-test.sh /app/start-test.sh
 
