--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -17,4 +17,4 @@ jobs:
           dotnet build
     - name: test
       run: |
-          docker-compose -f ./.github/tests/docker-compose-test.yml up --build
+          docker-compose -f ./.github/tests/docker-compose-test.yml up --build -d
