--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -5,8 +5,10 @@ COPY . .
 WORKDIR /src/src
 RUN dotnet restore "./Mine.Commerce.Service.sln"
 
-WORKDIR /src
-COPY /.github/tests/start-test.sh /app/start-test.sh
-
+FROM mine-service-test
 WORKDIR /app
-ENTRYPOINT ["start-test.sh"]
+COPY /.github/tests/start-test.sh start-test.sh
+
+RUN chmod +x "start-test.sh"
+
+ENTRYPOINT ["/app/start-test.sh"]
