--- a/src/Mine.Commerce.Api/Mine.Commerce.Api.csproj
+++ b/src/Mine.Commerce.Api/Mine.Commerce.Api.csproj
@@ -1,9 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <UserSecretsId>aa39862b-74d7-4749-938d-4906d9d80636</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>.</DockerfileContext>
+    <LangVersion>9.0</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'Mine.eCommere.Api' " />
   <ItemGroup>
