--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -4,12 +4,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
+    - uses: actions/setup-dotnet@v1
+      with:
+          dotnet-version: '5.0.100'
     - uses: azure/docker-login@v1
       with:
         login-server: mmondocker.azurecr.io
         username: ${{ secrets.acr_mmondocker_username }}
         password: ${{ secrets.acr_mmondocker_password }}
-    
+
     - name: Build
       run: |
           cd "./src"
